[package]
name = "cse223_b"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quinn = "0.8.2"
tokio = { version = "1.0", features = ["rt-multi-thread", "macros", "sync", "time", "fs"] }
tonic = { verison = "0.7.1", features = ["tls", "compression"] }
prost = "0.10"
prost-types = "0.10"
solana-program = "1.10.13"
solana-client = "1.10.13"
solana-sdk = "1.10.13"
anyhow = "1.0.40"
thiserror = "1.0.24"